# heliot-term-standardizer

./: LICENSE  README.md  pyproject.toml
configs/: default.yaml
data/processed/: aliases.jsonl  build_report.json  concepts.jsonl  drug_brands.jsonl  drug_products.jsonl
data/raw/: drugs.csv  synonyms.json
scripts/: build_kb.py  build_semantic_index.py  inspect_kb.py  inspect_raw_data.py  interactive_cli.py  run_pipeline.py  test_matcher.py
src/heliot_terms/: config.py
src/heliot_terms/domain/: enums.py  ids.py  models.py
src/heliot_terms/fallback/: acceptance.py  base.py  candidate_extractor.py  models.py  symspell_fuzzy_matcher.py
src/heliot_terms/matching/: aho_corasick_matcher.py  base.py  factory.py  models.py
src/heliot_terms/normalization/: drug_name_parser.py  text_normalizer.py
src/heliot_terms/pipeline/: builder.py  factory.py  models.py  standardization_pipeline.py
src/heliot_terms/resolution/: factory.py  models.py  overlap_resolver.py
tests/unit/: test_aho_corasick_matcher.py  test_composite_fuzzy_matcher.py  test_dictionary_builder.py  test_domain_models.py  test_drug_name_parser.py  test_fuzzy_acceptance.py  test_fuzzy_candidate_extractor.py  test_loaders.py  test_ngram_rapidfuzz_matcher.py  test_overlap_resolver.py  test_pipeline_with_composite_fuzzy_fallback.py  test_pipeline_with_fuzzy_fallback.py  test_pipeline_with_semantic_fallback.py  test_semantic_acceptance.py  test_semantic_hnsw_index.py  test_semantic_ner_candidate_extractor.py  test_standardization_pipeline.py  test_symspell_fuzzy_matcher.py  test_text_normalizer.py
(+20 files in other folders)
